# AlphaB0t

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  config.py  constants.py  example.env  main.py  pyproject.toml  requirements.txt
AI/: clean_data.py  get_data.py  json_helper.py  predict.py  train_model.py
Kraken/: authenticated_kraken.py  main.py
ML/: clean_data.py  get_data.py  json_helper.py  predict.py  train_model.py
Robinhood Crypto/: bot.py  config.py  grid_bot.py  main.py  order.py
RobinhoodCrypto/: error_queue.py  grid_bot.py  gridbot.py  helpers.py
Strategy/: gridbot.py
app/: README.md  __init__.py  api.py  enums.py  positionmanager.py  positiontracker.py  riskmanager.py
app/bots/: bot.py  gridbot.py
app/enums/: enums.py
app/exchanges/: cmc_api.py  exchange.py  futuresexchange.py  optionexchange.py
app/models/: bot.py  error.py  exchange.py  grid.py  grid_bot.py  gridbot.py  ohlc.py  order.py  result.py  sentimentbot.py
app/models/Strategy/ML/: get_data.py
app/models/strategies/: gridbot.py
app/models/strategies/ML/: clean_data.py  get_data.py  (+3 more)
app/strategies/: STRATEGYFORMATION.md  gridbot.py  helpers.py  order.py  strategy.py
app/strategies/LSTM/: clean_data.py  get_data.py  json_helper.py  model_constants.py  predict.py  train_model.py
app/strategies/ML/: clean_data.py  get_data.py  json_helper.py  predict.py  train_model.py
app/views/: api.py
models/: exchange.py
spot-grid-trading-bot/views/: api.py
src/: main.cpp
src_cpp/: backtest.cpp  main.cpp
tests/: test.env  test_bot.py  test_grid_levels.py  test_kraken.py
