[tool.poetry]
name = "AlphaB0t-engine"
version = "0.2.0"
description = "A cryptocurrency trading application"
authors = ["Tyler Pruitt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.2"
Flask-SQLAlchemy = "3.0.2"
psycopg2-binary = "^2.9.10"
SQLAlchemy = "2.0.16"
Flask-Migrate = "2.7.0"
flask-cors = "6.0.0"
python-dotenv = "1.0.0"
cryptography = "^44.0.1"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
